nobase_include_HEADERS = crypto/hash.h \
			 crypto/cipher.h \
			 fs/header.h \
			 fs/filewriter.h \
			 cfe/macros.h \
			 cfe/malloc.h \
			 cfe/compiler.h \
			 cfe/compiler-gcc.h \
			 cfe/compiler-clang.h \
			 cfe/atomic.h \
			 cfe/cfe.h \
			 cfe/ref.h \
			 cfe/utils.h \
			 cfe/hash.h \
			 cfe/list.h \
			 cfe/log.h \
			 cfe/keystore.h
