nobase_include_HEADERS = \
			 crypto/cipher.h \
			 crypto/hash.h \
			 crypto/pbkdf.h \
			 crypto/rand.h \
			 cfe/atomic.h \
			 cfe/bug.h \
			 cfe/cfe.h \
			 cfe/compiler.h \
			 cfe/compiler-gcc.h \
			 cfe/compiler-clang.h \
			 cfe/fcntl.h \
			 cfe/hash.h \
			 cfe/keystore.h \
			 cfe/list.h \
			 cfe/log.h \
			 cfe/macros.h \
			 cfe/malloc.h \
			 cfe/ref.h \
			 cfe/types.h \
			 cfe/utils.h \
			 fs/filewriter.h \
			 fs/header.h
